--- a/filmes05.html
+++ b/filmes05.html
@@ -2,11 +2,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cine.maconha</title>
+    <title>cine.maconha</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/mediaquery.css">
-
+    <link rel="icon" href="imagens/cinemaconha-logo.jpg" type="icon">
 </head>
 <html>
     <body class="container">
