--- a/filmes05.html
+++ b/filmes05.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/mediaquery.css">
-    <link rel="icon" href="imagens/cinemaconha-logo.jpg" type="icon">
+    <link rel="icon" href="imagens/cinemaconha-icone.jpg" type="icon">
 </head>
 <html>
     <body class="container">
@@ -47,7 +47,7 @@
         </main>
 
         <footer>
-            <p>Desenvolvido por <a href="https://github.com/lucasdonascimentoo">lucasdonascimentoo</a></p>
+            <p>Desenvolvido por <a href="https://github.com/lucasdonascimentoo" target="_blank">lucasdonascimentoo</a></p>
         </footer>
     </body>
 </html>
