--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>cine.maconha</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaquery.css">
-    <link rel="icon" href="imagens/cinemaconha-logo.jpg" type="icon">
+    <link rel="icon" href="imagens/cinemaconha-icone.jpg" type="icon">
 </head>
 <html> 
     <body class="container">
@@ -45,7 +45,7 @@
                 </main>
             
             <footer>
-                <p>Desenvolvido por <a href="https://github.com/lucasdonascimentoo">lucasdonascimentoo</a></p>
+                <p>Desenvolvido por <a href="https://github.com/lucasdonascimentoo" target="_blank">lucasdonascimentoo</a></p>
             </footer>
     </body>
 </html>
