--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <link rel="icon" href="imagens/cinemaconha-icone.jpg" type="icon">
     <meta name="description" content="Site com 'críticas' de filmes e séries da página @cine.maconha no instagram">
     <link rel="manifest" href="manifest.json">
-		<link rel="icon" href="images/120.png" type="image/png">
+		<link rel="icon" href="imagens/120.png" type="image/png">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="msapplication-TileImage" content="images/144.png">
 		<meta name="msapplication-TileColor" content="#FDFED6">
 		<meta name="theme-color" content="#FDFED6">
-		<link rel="shortcut icon" sizes="180x180" href="images/180.png">
-		<link rel="shortcut icon" sizes="114x114" href="images/114.png">
+		<link rel="shortcut icon" sizes="180x180" href="imagens/180.png">
+		<link rel="shortcut icon" sizes="114x114" href="imagens/114.png">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="green">
 		<meta name="apple-mobile-web-app-title" content="cine.maconha">
-		<link rel="apple-touch-icon" href="images/144.png">
-		<link rel="apple-touch-icon" href="images/180.png">
+		<link rel="apple-touch-icon" href="imagens/144.png">
+		<link rel="apple-touch-icon" href="imagens/180.png">
 </head>
 <html> 
     <body class="container">
