--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="manifest.json">
 		<link rel="icon" href="imagens/120.png" type="image/png">
 		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="msapplication-TileImage" content="images/144.png">
+		<meta name="msapplication-TileImage" content="imagens/144.png">
 		<meta name="msapplication-TileColor" content="#FDFED6">
 		<meta name="theme-color" content="#FDFED6">
 		<link rel="shortcut icon" sizes="180x180" href="imagens/180.png">
