--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link rel="shortcut icon" sizes="180x180" href="imagens/180.png">
 		<link rel="shortcut icon" sizes="114x114" href="imagens/114.png">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="green">
+		<meta name="apple-mobile-web-app-status-bar-style" content="#0F5E03">
 		<meta name="apple-mobile-web-app-title" content="cine.maconha">
 		<link rel="apple-touch-icon" href="imagens/144.png">
 		<link rel="apple-touch-icon" href="imagens/180.png">
