--- a/filmes04.html
+++ b/filmes04.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/mediaquery.css">
     <link rel="icon" href="imagens/cinemaconha-icone.jpg" type="icon">
+    <meta name="description" content="Site com 'críticas' de filmes e séries da página @cine.maconha no instagram">
+    <link rel="manifest" href="manifest.json">
+		<link rel="icon" href="imagens/120.png" type="image/png">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="msapplication-TileImage" content="imagens/144.png">
+		<meta name="msapplication-TileColor" content="#FDFED6">
+		<meta name="theme-color" content="#FDFED6">
+		<link rel="shortcut icon" sizes="180x180" href="imagens/180.png">
+		<link rel="shortcut icon" sizes="114x114" href="imagens/114.png">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="#0F5E03">
+		<meta name="apple-mobile-web-app-title" content="cine.maconha">
+		<link rel="apple-touch-icon" href="imagens/144.png">
+		<link rel="apple-touch-icon" href="imagens/180.png">
 </head>
 <html>
     <body class="container">
